// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project/List empty 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-btzYZH dcBPpq"
  >
    <div
      className="sc-jDwBTQ fRXXnG"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-gPEVay eQYmiW"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-iRbamj blSEcj"
        >
          <div
            className="sc-gPEVay eQYmiW"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-jlyJG ivDHoW"
        >
          <ul
            className="sc-gipzik sc-csuQGl kTeIRg"
          />
          <ul
            className="sc-gipzik sc-Rmtcm iXyibh"
          >
            <li
              className="sc-bRBYWo sc-jhAzac cIUGfV"
            >
              <a
                href="/user"
                id="userBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </li>
            <li
              className="sc-bRBYWo sc-jhAzac cIUGfV"
            >
              <a
                href="/logout"
                id="logoutBtn"
                onClick={[Function]}
              >
                Log Out
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-dqBHgY tqZfH"
    >
      <p
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "18px",
            "fontWeight": 200,
            "lineHeight": "1.33em",
            "margin": 0,
          }
        }
      >
        No Projects
         
      </p>
    </div>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-dnqmqq BDAcl"
      >
        <button
          disabled={false}
          id="addProjectBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project/List list 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-btzYZH dcBPpq"
  >
    <div
      className="sc-jDwBTQ fRXXnG"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-gPEVay eQYmiW"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-iRbamj blSEcj"
        >
          <div
            className="sc-gPEVay eQYmiW"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Projects
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-jlyJG ivDHoW"
        >
          <ul
            className="sc-gipzik sc-csuQGl kTeIRg"
          />
          <ul
            className="sc-gipzik sc-Rmtcm iXyibh"
          >
            <li
              className="sc-bRBYWo sc-jhAzac cIUGfV"
            >
              <a
                href="/user"
                id="userBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </li>
            <li
              className="sc-bRBYWo sc-jhAzac cIUGfV"
            >
              <a
                href="/logout"
                id="logoutBtn"
                onClick={[Function]}
              >
                Log Out
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      className="sc-lhVmIH hWWAjL"
    >
      <li
        className="sc-bYSBpT cCRUfh"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <ul
              className="sc-elJkPf jMtxdb"
            >
              <li
                className="sc-jtRfpW dwHXtk"
                id="headerItem-0"
              >
                3 months ago
              </li>
              <li
                className="sc-jtRfpW dwHXtk"
                id="headerItem-1"
              >
                In Progress
              </li>
              <li
                className="sc-jtRfpW dwHXtk"
                id="headerItem-2"
              >
                Sed sed risus a nibh Maecenas nec pulvinar ex
              </li>
            </ul>
          </div>
          <h1
            id="projectName-0"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Project Name
          </h1>
          <div
            className="sc-kTUwUJ fpMPa"
            onClick={[Function]}
          >
            <p
              id="projectDescription-0"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "18px",
                  "fontWeight": 200,
                  "lineHeight": "1.33em",
                  "margin": 0,
                }
              }
            >
              Description
            </p>
          </div>
          <span
            id="apiPath-0"
            style={
              Object {
                "display": "block",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "12px",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
                "width": "100%",
              }
            }
          >
            schemacms/api/project_title
          </span>
        </div>
      </li>
      <li
        className="sc-bYSBpT cCRUfh"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <ul
              className="sc-elJkPf jMtxdb"
            >
              <li
                className="sc-jtRfpW dwHXtk"
                id="headerItem-0"
              >
                3 months ago
              </li>
              <li
                className="sc-jtRfpW dwHXtk"
                id="headerItem-1"
              >
                Published
              </li>
              <li
                className="sc-jtRfpW dwHXtk"
                id="headerItem-2"
              >
                Tadeusz Kosciuszko
              </li>
            </ul>
          </div>
          <h1
            id="projectName-1"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Honec sodales libero non fermentum aliquam
          </h1>
          <div
            className="sc-kTUwUJ fpMPa"
            onClick={[Function]}
          >
            <p
              id="projectDescription-1"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "18px",
                  "fontWeight": 200,
                  "lineHeight": "1.33em",
                  "margin": 0,
                }
              }
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
            </p>
          </div>
          <span
            id="apiPath-1"
            style={
              Object {
                "display": "block",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "12px",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
                "width": "100%",
              }
            }
          >
            schemacms/api/wuwhonec-sodales-libero-non-fermentum-aliquam-honec-sodales-libero-non-fermentum-aliquam
          </span>
        </div>
      </li>
    </ul>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-dnqmqq BDAcl"
      >
        <button
          disabled={false}
          id="addProjectBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
